fix: resource columns too short

--- a/lucuberate-client/src/assets/App.css
+++ b/lucuberate-client/src/assets/App.css
@@ -954,15 +954,10 @@ input[type="radio"]:checked + label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
-  flex: 0 0 100%;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
   margin: 0;
-  max-width: 100%;
-  padding: 0;
 }
 
 .add-remove-resource {
@@ -971,6 +966,14 @@ input[type="radio"]:checked + label {
   cursor: pointer;
   font-size: 0.8rem;
   margin-left: 3px;
+}
+
+.form-group.resource-group {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0;
 }
 
 .resource-group .form-group.columns-2 {
